--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -17,6 +17,62 @@ notification after a few seconds & instead, give the user the ability to dismiss
     this is going to be included in the message container in the base template i.e 
     the message that'll be displayed here to the user will come from base.html file. -->
     <div class="toast-body bg-white">
-        {{ message }}        
+        <div class="row">
+            <div class="col">
+                {{ message }}
+                <hr class="mt-1 mb-3">
+            </div>
+        </div>
+        <!-- This below will render the shopping bag items only if there's a grand total. -->
+        {% if grand_total %}
+        <!--  Below is a paragraph which shows the number of items in the bag in parentheses. -->
+            <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
+            <div class="bag-notification-wrapper">
+                <!-- For each item in the bag, we'll render a new row split into columns of 
+                3 & 9. The 1st column will contain the image & the other 75% of the row will 
+                have a paragraph for the items name, size if applicable & quantity in the bag.
+                This whole block of code will be wrapped in a div with a class of bag-notification-wrapper.
+                to restrict it from getting too large & we'll add the CSS for that in base.css file. -->
+                {% for item in bag_items %}
+                    <div class="row">
+                        <div class="col-3 my-1">
+                            <img class="w-100" src="{{ item.product.image.url }}">
+                        </div>
+                        <div class="col-9">
+                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
+                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <!-- The last row here is just a single column which will contain the bag total,
+            a notification about free delivery & a button to go to the shopping bag page. -->
+            <div class="row">
+                <div class="col">
+                    <!-- This column begins with the total and adds a note that it excludes 
+                        delivery if there is a free delivery delta -->
+                    <strong><p class="mt-3 mb-1 text-black">
+                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
+                        <span class="float-right">${{ total|floatformat:2 }}</span>
+                    </p></strong>
+                    <!-- Then if there is a free delivery delta we render a paragraph to tell 
+                    them how much more they need to spend in order to get free delivery. -->
+                    {% if free_delivery_delta > 0 %}
+                        <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
+                            Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
+                        </p>
+                    {% endif %}
+                    <!-- And finally a button which points at the 'view bag' URL & has a text of 
+                    'Go To Secure Checkout' on it. -->
+                    <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
+                        <span class="text-uppercase">Go To Secure Checkout</span>
+                        <span class="icon">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+        {% endif %}      
     </div>
 </div>
