Add stripe elements

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -177,3 +177,13 @@ shopping bag page since we're using bag items here below. -->
         </div>
     </div>
 {% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <!-- Since we can't render Django template variables in external jscript files,
+    we need to use a built-in template filter called json_script to render them here
+    below & then we can access them in the external file. -->
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+{% endblock %}
