--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -39,3 +39,25 @@ to have black text & a solid black border. */
     color: #000;
     border: 1px solid #000;
 }
+
+#loading-overlay {
+	display: none;
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(23, 162, 184, .85);
+    /* The z-index of 9999 will make sure it stays on top of everything
+    on the page except for one key thing which is a pop-up from stripe
+    which needs to be on top of the overlay for the user to complete their payment. */
+    z-index: 9999;
+}
+
+.loading-spinner {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+}
