--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -143,6 +143,8 @@ shopping bag page since we're using bag items here below. -->
 
                         <!-- This will be used to display form errors, has an id of 'card errors' -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
                     <!-- The Submit Button div class. -->
