--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -40,6 +40,22 @@ to have black text & a solid black border. */
     border: 1px solid #000;
 }
 
+/* This css rule sets all select elements & their option 
+children to be black by default */
+select,
+select option {
+    color: #000000;
+}
+
+/* This css rule sets the select boxes colour to grey including 
+the option element that has an empty value attribute if it's 
+invalid due to not having anything selected i.e the blank one 
+provided by the model that just says 'Country'. */
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 #loading-overlay {
 	display: none;
 	position: fixed;
