--- a/static/css/base.css
+++ b/static/css/base.css
@@ -116,6 +116,13 @@ right of the screen. */
     cursor: pointer;
 }
 
+/* We'll also update the search boxes placeholder to match that
+same color of the other placeholderssince it's the only one now 
+that doesn't match. */
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
 /* ------------------------------- bootstrap toasts */
 /* This CSS below will position the message container in the upper right of  
 the screen & give it a high Z index so it's always on top of everything else. */
@@ -197,6 +204,69 @@ the screen & give it a high Z index so it's always on top of everything else. */
     max-width: 80%;
   }
 }
+
+/* Allauth form formatting */
+
+/* Here, we'll give all paragraphs in the inner content div a 
+top margin & same colour as bootstraps text secondary. */
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+/* We'll make all inputs have black borders & a zero border-radius. */
+.allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+/* This'll hide the labels on all except for the 'remember me' checkbox 
+on the login page since all the other inputs will have placeholders */
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+/* This'll ensure that all the placeholders have the same colour as 
+the rest of the site. */
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+/* We'll update all the forms buttons & the link colour */
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #000;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #222;
+    border-color: #222;
+}
+
+.allauth-form-inner-content a {
+	color: #17a2b8; /* text-info */
+}
+
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
