--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,5 +23,33 @@
                 <hr>
             </div>
         </div>
-        {{ profile }}
+        <!-- We'll create a new row. Half of this page will be the profile & 
+            the other half will be the order history so we'll create 2 columns. -->
+        <div class="row">
+            <!-- The 1st column will have a small paragraph heading & then a form
+            that will submit to the profile URL & use the post method which we'll 
+            write soon & give it an id of 'profile-update-form' so it can be easily 
+            identified. Then it'll be rendered as a crispy form.  -->
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <!-- Lastly, we need a submit' button that looks just like our other buttons
+                    & floats on the right of the column. -->
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <!-- The 2nd column will have a small paragraph heading & underneath it, 
+            we'll spit out/display all the user's orders if any using the curly braces. -->
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Order History</p>
+                {{ orders }}
+            </div>
+        </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
