--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,6 +42,14 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    <!-- This'll give store owners(superuser) a way to quickly edit or delete 
+                    a product. -->
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <!-- This form will use the post method since we're sending some 
                     information about the product we want to add to the bag to the server.
