Product Admin - Fixing the image field part 2

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -33,7 +33,15 @@
                 be uploaded properly. -->
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    {% for field in form %}
+                        <!-- We'll add an if statement to the add template so that we will only 
+                        render the field as a crispy field if it's not our custom image widget. -->
+                        {% if field.name != 'image' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <!-- We'll add a submit & cancel buttons to go back to the products page.
                     They'll both be aligned to the right at the bottom of the form. -->
                     <div class="text-right">
@@ -44,4 +52,19 @@
             </div>            
         </div>
     </div>
+{% endblock %}
+
+<!-- This JS will handle notifying the user of what the image will be changed to. -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        /* It'll listen to the change event on the new image input. */ 
+        $('#new-image').change(function() {
+            /*  Then, whenever it changes, we'll get the file that was added to it. */ 
+            var file = $('#new-image')[0].files[0];
+            /* And set the file name paragraph in the widget template to the file's 
+            name using back ticks. */ 
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
