--- a/static/css/base.css
+++ b/static/css/base.css
@@ -268,6 +268,43 @@ the rest of the site. */
 }
 
 
+/* Product Form */
+/* This sets the overflow of the span wrapped around our file input 
+to hidden & give it relative positioning. */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+/*  We'll position the actual input absolutely in the top right of the span element
+& give it a min-width & height of 100% so it takes up the entire span, then give it 
+0 opacity so it doesn't cover the button. Here, we are ensuring that the entire
+input which is clickable lives inside this span that looks like a button. */
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Then, here below, we'll make it invisible so it appears one is clicking the button.
+custom checkbox. We'll also make the custom checkbox red to match bootstrap's danger 
+class & take off the border-radius. */
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #dc3545;
+    border-color: #dc3545;
+    border-radius: 0;
+}
+
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
