--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -25,19 +25,68 @@
                 <hr>
             </div>
         </div>
+
         <div class="row">
             <div class="col">
                 <!-- The 2nd row & column will contain a table to show the bag contents. -->
                 <!-- We added an if statement because we only want to render the table if 
                 there's something in the shopping bag. -->
                 {% if bag_items %}
+                    <!-- For mobile layout, we'll create a div below with display block
+                    & display medium none so it'll only display on mobile. -->
+                    <div class="d-block d-md-none">
+                        <div class="row">
+                            <div class="col">
+                                {% include "bag/bag-total.html" %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                {% include "bag/checkout-buttons.html" %}
+                                <p class="text-muted mb-5">A summary of your bag contents is below</p>
+                            </div>
+                        </div>
+                        {% for item in bag_items %}
+                            <div class="row">
+                                <!-- Each row will have 4 columns stacked on top of each other on 
+                                extra small screens & side by side on small screens. -->
+                                <!-- 1st column will hold the product image. -->
+                                <div class="col-12 col-sm-6 mb-2">
+                                    {% include "bag/product-image.html" %}
+                                </div>
+                                <!-- The 2nd column will have the product info. -->
+                                <div class="col-12 col-sm-6 mb-2">
+                                    {% include "bag/product-info.html" %}
+                                </div>
+                                <!-- The 3rd column will hold the price & subtotal. -->
+                                <div class="col-12 col-sm-6 order-sm-last">
+                                    <p class="my-0">Price Each: ${{ item.product.price }}</p>
+                                    <p><strong>Subtotal: </strong>${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                </div>
+                                <!-- The 4th/last column will hold the quantity form. -->
+                                <div class="col-12 col-sm-6">
+                                    {% include "bag/quantity-form.html" %}
+                                </div>
+                            </div>
+                            <div class="row"><div class="col"><hr></div></div>
+                        {% endfor %}
+                        <!-- Since this mobile layout could get quite long if there are lots 
+                        of products, we'll give the user a quick way to get back to the top of 
+                        the page by copying the back to top link from the products page along 
+                        with its JavaScript. -->
+                        <div class="btt-button shadow-sm rounded-0 border border-black">
+                            <a class="btt-link d-flex h-100">
+                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                            </a>	
+                        </div>
+                    </div>
                     <!-- {{ bag_items }}
                     <br>
                     <br>
                     {{ request.session.bag }} -->
                 <!-- We'll render this table on next line if there are items in the bag
                 i.e render out the bag_item so we can see what we're working with. -->
-                    <div class="table-responsive rounded">
+                    <div class="table-responsive rounded d-none d-md-block">
                         <!-- We'll render the bag items here to test that it works. 
                         Also, we'll add some content to the shopping bag table to 
                         render out the list of items in the bag. The basis for this 
@@ -63,107 +112,48 @@
                             {% for item in bag_items %}
                                 <tr>
                                     <td class="p-3 w-25">
-                                        {% if item.product.image %}
-                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}">
-                                        {% else %}
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                        {% endif %}
+                                        <!-- This row handles the product image. This feature 
+                                        has been moved to its own file named product-image.html 
+                                        & referenced here below. -->
+                                        {% include "bag/product-image.html" %}
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                        <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
-                                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                        <!-- This row handles the product description. This feature has 
+                                        been moved to its own file named product-info.html & 
+                                        referenced here below  -->
+                                        {% include "bag/product-info.html" %}
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <!-- <p class="my-0">{{ item.quantity }}</p> -->
-                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
-                                            {% csrf_token %}
-                                            <div class="form-group">
-                                                <div class="input-group">
-                                                    <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                            data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                                            <span>
-                                                                <i class="fas fa-minus fa-sm"></i>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    <input class="form-control form-control-sm qty_input" type="number"
-                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.item_id }}"
-                                                        id="id_qty_{{ item.item_id }}">
-                                                    <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                            data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                                            <span>
-                                                                <i class="fas fa-plus fa-sm"></i>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    <!-- We'll submit the size of the item the 
-                                                    user wants to update or remove in a hidden 
-                                                    input field if the product have sizes. -->
-                                                    {% if item.product.has_sizes %}
-                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
-                                                    {% endif %}
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <!-- There's no submit button within the form above & 
-                                        it's for a purpose i.e to keep the visual impact mini-
-                                        mal. We'll just use a simple link and handle its click 
-                                        event with JScript. Under the form, we'll create 2 anch-
-                                        or elements; one for updating the quantity which will 
-                                        submit the form & the other for removing the item from 
-                                        the bag entirely. The one for removing the bag will have 
-                                        a data attribute similar to the 'data item id' attributes 
-                                        on the buttons & that will be used to discern which spec-
-                                        ific item the customer wants to remove if there are mult-
-                                        iple sizes of this item in the bag. -->
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+                                        <!-- This form handles the price, quantity, total & 
+                                        grand total & the feature has been moved to its own 
+                                        file named quantity-form.html & referenced here below  -->
+                                        {% include "bag/quantity-form.html" %}
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
-                            <!-- In the 1st row below, we'll use the total the delivery charges,
-                            grand_total & the free delivery_delta to show the user a summary of 
+                            <!-- In the 1st row below, we'll use the total, delivery charges,
+                            grand_total & free delivery_delta to show the user a summary of 
                             their costs & entice them to spend a little more if they're under 
-                            the free delivery threshold. -->
+                            the free delivery threshold. This feature has been 
+                            moved to its own file named bag-total.html & referenced here below -->
                             <tr>
                                 <td colspan="5" class="pt-5 text-right">
-                                    <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
-                                    {% if free_delivery_delta > 0 %}
-                                        <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>${{ free_delivery_delta }}</strong> more!
-                                        </p>
-                                    {% endif %}
+                                    {% include "bag/bag-total.html" %}
                                 </td>
                             </tr>
                             <!-- In the final row below, we'll render a 'Keep Shopping' button 
                             in case they're not done & a secure checkout button which will take 
-                            them to the checkout page once it's created. -->
+                            them to the checkout page once it's created. This feature has been 
+                            moved to its own file named checkout-buttons.html & referenced here below -->
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                        <span class="text-uppercase">Secure Checkout</span>
-                                        <span class="icon">
-                                            <i class="fas fa-lock"></i>
-                                        </span>
-                                    </a>
+                                    {% include "bag/checkout-buttons.html" %}
                                 </td>
                             </tr>
                         </table>
@@ -187,6 +177,13 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<!-- This is the JScript that handles the back to top link 
+in our mobile layout. -->
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
 {% include 'products/includes/quantity_input_script.html' %}
 
 <!-- Below is the JScript to handle the 'Update' & 'Remove'  
