Add comments to code

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -141,10 +141,10 @@
                             {% endwith %}
                         </div>
                     </form>
-                </div>
-            </div>
-        </div>
-    </div>
+                </div>  <!-- product-details-container -->
+            </div>  <!-- col-12 col-md-6 class ends -->
+        </div>  <!-- row class ends -->
+    </div> <!-- container-fluid class ends -->
 {% endblock %}
 
 {% block postloadjs %}
